v8/tests/messages/unclosed-regexp-diveq.out
unclosed-regexp-diveq.js:1: Uncaught SyntaxError: Invalid regular expression: missing /
var x = /=...
        ^
